--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@ text-align:center;
 overflow-x:hidden;
 }
 
-/* HEADER */
-
 .topbar{
 padding:15px;
 font-size:22px;
@@ -23,8 +21,6 @@ letter-spacing:4px;
 color:red;
 text-shadow:0 0 20px red;
 }
-
-/* ALBUM */
 
 .album-wrapper{
 position:relative;
@@ -62,8 +58,6 @@ from{transform:rotate(0deg);}
 to{transform:rotate(360deg);}
 }
 
-/* CONTROLS */
-
 .controls button{
 background:rgba(255,0,0,0.2);
 border:none;
@@ -80,15 +74,33 @@ cursor:pointer;
 background:red;
 }
 
+/* TIME BAR */
+
+.progress-container{
+width:85%;
+margin:10px auto;
+}
+
+#progress{
+width:100%;
+}
+
+.time{
+display:flex;
+justify-content:space-between;
+font-size:12px;
+opacity:0.7;
+}
+
 /* VISUALIZER */
 
 canvas{
 width:100%;
-height:140px;
-margin-top:15px;
+height:120px;
+margin-top:10px;
 }
 
-/* PLAYLIST HIDDEN */
+/* PLAYLIST */
 
 .playlist{
 position:fixed;
@@ -145,43 +157,6 @@ font-size:18px;
 box-shadow:0 0 15px red;
 cursor:pointer;
 }
-
-/* EQ PANEL */
-
-.eq-panel{
-position:fixed;
-bottom:-320px;
-left:0;
-width:100%;
-height:260px;
-background:#111;
-box-shadow:0 -5px 20px red;
-transition:0.4s;
-padding-top:20px;
-}
-
-.eq-panel.active{
-bottom:60px; /* naka-angat konti */
-}
-
-.eq-container{
-display:flex;
-justify-content:space-around;
-height:200px;
-}
-
-.eq{
-display:flex;
-flex-direction:column;
-align-items:center;
-font-size:12px;
-}
-
-.eq input{
-writing-mode:bt-lr;
--webkit-appearance:slider-vertical;
-height:150px;
-}
 </style>
 </head>
 
@@ -217,43 +192,20 @@ d="M130,130 m-115,0 a115,115 0 1,1 230,0 a115,115 0 1,1 -230,0"/>
 <button onclick="nextSong()">⏭</button>
 </div>
 
+<div class="progress-container">
+<input type="range" id="progress" value="0" min="0" step="1">
+<div class="time">
+<span id="currentTime">0:00</span>
+<span id="duration">0:00</span>
+</div>
+</div>
+
 <canvas id="visualizer"></canvas>
 
 <button class="song-btn" onclick="togglePlaylist()">🎵</button>
-<button class="eq-btn" onclick="toggleEQ()">🎚</button>
+<button class="eq-btn">🎚</button>
 
 <div class="playlist" id="playlist"></div>
-
-<div class="eq-panel" id="eqPanel">
-<div class="eq-container">
-
-<div class="eq">
-<label>SUB</label>
-<input type="range" min="-30" max="30" value="0" id="sub">
-</div>
-
-<div class="eq">
-<label>BASS</label>
-<input type="range" min="-30" max="30" value="0" id="bass">
-</div>
-
-<div class="eq">
-<label>MID</label>
-<input type="range" min="-30" max="30" value="0" id="mid">
-</div>
-
-<div class="eq">
-<label>HIGH</label>
-<input type="range" min="-30" max="30" value="0" id="high">
-</div>
-
-<div class="eq">
-<label>TREBLE</label>
-<input type="range" min="-30" max="30" value="0" id="treble">
-</div>
-
-</div>
-</div>
 
 <audio id="audio" crossorigin="anonymous"></audio>
 
@@ -292,6 +244,9 @@ let current=0;
 
 const audio=document.getElementById("audio");
 const playBtn=document.getElementById("playBtn");
+const progress=document.getElementById("progress");
+const currentTimeEl=document.getElementById("currentTime");
+const durationEl=document.getElementById("duration");
 const playlistDiv=document.getElementById("playlist");
 
 function loadSong(i){
@@ -326,6 +281,63 @@ playBtn.innerText="⏸";
 
 audio.addEventListener("ended",nextSong);
 
+audio.addEventListener("timeupdate",()=>{
+progress.value=audio.currentTime;
+currentTimeEl.innerText=formatTime(audio.currentTime);
+});
+
+audio.addEventListener("loadedmetadata",()=>{
+progress.max=audio.duration;
+durationEl.innerText=formatTime(audio.duration);
+});
+
+progress.addEventListener("input",()=>{
+audio.currentTime=progress.value;
+});
+
+function formatTime(time){
+let min=Math.floor(time/60);
+let sec=Math.floor(time%60);
+if(sec<10) sec="0"+sec;
+return min+":"+sec;
+}
+
+/* VISUALIZER */
+
+const audioCtx=new (window.AudioContext||window.webkitAudioContext)();
+const source=audioCtx.createMediaElementSource(audio);
+const analyser=audioCtx.createAnalyser();
+source.connect(analyser);
+analyser.connect(audioCtx.destination);
+analyser.fftSize=256;
+
+const canvas=document.getElementById("visualizer");
+const ctx=canvas.getContext("2d");
+canvas.width=window.innerWidth;
+canvas.height=120;
+
+const bufferLength=analyser.frequencyBinCount;
+const dataArray=new Uint8Array(bufferLength);
+
+function draw(){
+requestAnimationFrame(draw);
+analyser.getByteFrequencyData(dataArray);
+ctx.clearRect(0,0,canvas.width,canvas.height);
+
+let barWidth=(canvas.width/bufferLength)*2;
+let x=0;
+
+for(let i=0;i<bufferLength;i++){
+let barHeight=dataArray[i];
+ctx.fillStyle="rgb("+(barHeight+100)+",0,0)";
+ctx.fillRect(x,canvas.height-barHeight/1.5,barWidth,barHeight/1.5);
+x+=barWidth+1;
+}
+}
+draw();
+
+/* PLAYLIST */
+
 function buildPlaylist(){
 playlistDiv.innerHTML="";
 songs.forEach((song,i)=>{
@@ -345,10 +357,6 @@ el.classList.toggle("active",i===current);
 
 function togglePlaylist(){
 playlistDiv.classList.toggle("active");
-}
-
-function toggleEQ(){
-document.getElementById("eqPanel").classList.toggle("active");
 }
 
 buildPlaylist();
